form validate updates

--- a/public/home.html
+++ b/public/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/css/style.css">
     <meta charset="utf-8">
-    <title>Friend Finder</title>
+    <title>Buddy Up</title>
 </head>
 
 <body>
@@ -14,11 +14,11 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="jumbotron" id="hometron">
-                    <h1><i class="fa fa-facebook-square"></i> Coding Nerds Meet</h1>
-                    <h3>The Facebook for coding dorks!</h3>
+                    <h1><i class="fa fa-users"></i> Buddy Up</h1>
+                    <h3>Don't just buddy up with anyone. We interpret personalities into data and match yours with others </h3>
                     <hr>
-                    <h4>Take a quick survey to find a coding friend similar to you. Avoid awkward social encounters by allowing us to make friends FOR you!</h4>
-                    <a href="/find-a-match"><button type="button" id="survey-btn" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> Survey</button></a>
+                    <h4>Take a quick personality survey to find a buddy similar to you. Avoid awkward social encounters by allowing us to make buddies FOR you! You don't have to do much of anything - AKA We are enablers!</h4>
+                    <a href="/find-a-match"><button type="button" id="survey-btn" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> Personality Survey</button></a>
                 </div>
             </div>
         </div>
