--- a/public/match.html
+++ b/public/match.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
     <meta charset="utf-8">
-    <title>Friend Finder Survey</title>
+    <title>Buddy Up: Personality Survey</title>
 </head>
 
 <body>
     <div class="container">
         <div class="jumbotron" id="surveytron">
             <h1 class="text-center">Personality Survey</h1>
-            <h2 class="text-center">Find Your Matches</h2>
+            <h2 class="text-center">Match Up With A Buddy</h2>
         </div>
 
         <div class="row">
@@ -31,7 +31,7 @@
                                 Browse… <input id="photo" type="file"  name="uploads[]" class="form-control">
                             </span>
                         </span>
-                        <input id="photo-name" type="text" class="form-control" readonly>
+                        <input id="photo-name" type="text" class="form-control form-control-feedback" readonly>
                         <span id="photo-span" aria-hidden="true"></span>
 
                     </div>
@@ -69,7 +69,7 @@
                     </select>
                             </div>
                             <div class="form-group">
-                                <label>I spend more time talking to my computer than others.</label>
+                                <label>I spend more time talking to my phone/computer than others.</label>
                                 <select class="form-control" id="question3">
                       <option>1 (strongly disagree)</option>
                       <option>2</option>
@@ -89,7 +89,7 @@
                     </select>
                             </div>
                             <div class="form-group">
-                                <label>I love memes related to programmers.</label>
+                                <label>I love researching funny memes.</label>
                                 <select class="form-control" id="question5">
                       <option>1 (strongly disagree)</option>
                       <option>2</option>
@@ -109,7 +109,7 @@
                     </select>
                             </div>
                             <div class="form-group">
-                                <label>I spend more time trying to fix broken code than actually coding.</label>
+                                <label>I spend more time trying to fix people than focus on myself.</label>
                                 <select class="form-control" id="question7">
                       <option>1 (strongly disagree)</option>
                       <option>2</option>
@@ -119,7 +119,7 @@
                     </select>
                             </div>
                             <div class="form-group">
-                                <label>I' ve done extensive research on React Vs Angular</label>
+                                <label>I've done extensive research on something very unimportant (but interesting to me).</label>
                                 <select class="form-control" id="question8">
                       <option>1 (strongly disagree)</option>
                       <option>2</option>
