finished small details; script.js, jquery  form validation and resetting

--- a/public/home.html
+++ b/public/home.html
@@ -14,10 +14,10 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="jumbotron" id="hometron">
-                    <h1><i class="fa fa-users"></i> Buddy Up</h1>
-                    <h3>Don't just buddy up with anyone. We interpret personalities into data and match yours with others </h3>
+                    <h1><i class="fa fa-users"></i> <b>Buddy Up</b></h1>
+                    <h3>We translate your personality into useful data. Don't just buddy up with anyone, buddy up with your true match.</h3>
                     <hr>
-                    <h4>Take a quick personality survey to find a buddy similar to you. Avoid awkward social encounters by allowing us to make buddies FOR you! You don't have to do much of anything - AKA We are enablers!</h4>
+                    <h4>Avoid awkward social encounters by allowing us to make buddies FOR you! You don't have to do much of anything - We are enablers!</h4>
                     <a href="/find-a-match"><button type="button" id="survey-btn" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> Personality Survey</button></a>
                 </div>
             </div>
