--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
             <div class="col-xs-12">
                 <div class="jumbotron" id="hometron">
                     <h1><i class="fa fa-users"></i> <b>Buddy Up</b></h1>
-                    <h3>We translate your personality into useful data. Don't just buddy up with anyone, buddy up with your true match.</h3>
+                    <h3>We translate your personality into useful data. Don't just buddy up with anyone, buddy up with a true match.</h3>
                     <hr>
                     <h4>Avoid awkward social encounters by allowing us to make buddies FOR you! You don't have to do much of anything - We are enablers!</h4>
                     <a href="/find-a-match"><button type="button" id="survey-btn" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-list-alt"></span> Personality Survey</button></a>
